<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".Calendar_Page">


    <androidx.cardview.widget.CardView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/custom_editing"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Calendar"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editing">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/startDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Select Start Date"
            android:backgroundTint="@color/black"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/endDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select End Date"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/black"
            android:textAlignment="center"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:id="@+id/navigationView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:headerLayout="@layout/nav_header"-->
<!--        app:menu="@menu/calendar_xml" />-->

<!--    <CalendarView-->
<!--        android:id="@+id/startDateCalendarView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:visibility="gone" />-->

<!--    <CalendarView-->
<!--        android:id="@+id/endDateCalendarView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:visibility="gone" />-->


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editing">


    <CalendarView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/startDate"/>

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/endDate"/>

    </androidx.cardview.widget.CardView>

<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="20dp"-->
<!--        app:cardCornerRadius="30dp"-->
<!--        app:cardElevation="20dp"-->
<!--        android:background="@drawable/custom_editing">-->

<!--    <CalendarView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:id="@+id/endDate"/>-->

<!--    </androidx.cardview.widget.CardView>-->


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:padding="40dp"
        android:background="@drawable/custom_editing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">

    <EditText
        android:id="@+id/destinationEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:drawablePadding="8dp"
        android:background="@drawable/custom_editing"
        android:textColorHighlight="@color/cardview_dark_background"
        android:hint="Destination" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/calendarButton"
            android:padding="10dp"
            android:text="Save"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>





</LinearLayout>