...
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:hint="Description"
                />
            <TextView
                android:id="@+id/Des_Response"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/black"/>

...
