<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".Expense_analyzer">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        android:background="@drawable/custom_editing">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Expense Analyzer"
                android:id="@+id/list"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/nameDestination"
                android:background="@drawable/custom_editing"
                android:drawableLeft="@drawable/baseline_person_2_24"
                android:drawablePadding="8dp"
                android:hint="Destination"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="30dp"/>

            <Spinner
                android:id="@+id/costItemsSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_editing"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="30dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/estimatedCost"
                android:background="@drawable/custom_editing"
                android:drawableLeft="@drawable/baseline_attach_money_24"
                android:drawablePadding="8dp"
                android:hint="Estimated cost"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="30dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/saveExpenses"
                android:text="Save "
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                app:cornerRadius = "20dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="Response: " />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/responses2"
                android:layout_marginTop="10dp"
                android:text="The response is: "
                android:textColor="@color/black"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/show_expense"
        android:text="Show Expense"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        app:cornerRadius = "20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/showingLists"
        android:background="@color/white"
        android:text="Expenses:  "/>


</LinearLayout>

